RESOLVED FIXED155502
<attachment> on iOS isn't quite vertically centered
https://bugs.webkit.org/show_bug.cgi?id=155502
Summary <attachment> on iOS isn't quite vertically centered
Tim Horton
Reported 2016-03-15 12:11:54 PDT
<attachment> on iOS isn't quite vertically centered
Attachments
Patch (1.48 KB, patch)
2016-03-15 12:12 PDT, Tim Horton
bdakin: review+
Tim Horton
Comment 1 2016-03-15 12:12:44 PDT
Tim Horton
Comment 2 2016-03-15 12:45:27 PDT
Note You need to log in before you can comment on or make changes to this bug.