<attachment> on iOS isn't quite vertically centered https://bugs.webkit.org/show_bug.cgi?id=155502 <rdar://problem/24805991>

Reviewed by Beth Dakin.

No new tests; there are existing tests that will be enabled shortly.

* rendering/RenderThemeIOS.mm:
(WebCore::AttachmentInfo::AttachmentInfo):
We were overcounting the total height of the attachment content by one margin, because each item
would add in its margin, including the last one. Remove one margin.


Canonical link: https://commits.webkit.org/173625@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198223 268f45cc-cd09-0410-ab3c-d52691b4dbfc